--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CSS Intro</title>
     <!-- Exercise 1: Add a link element with a href attribute that links your external css file to this document  -->
+    <link rel="stylesheet" href="index.css">
   </head>
 
   <body>
     <header>
       <nav>
         <ul>
-          <li>
-            <a href="/">Home</a>
+          <li class="d-inline">
+          <a class="nav-link" href="/">Home</a>
           </li>
-          <li>
-            <a href="/about">About</a>
+          <li class="d-inline">
+          <a class="nav-link" href="/about">About</a>
           </li>
-          <li>
-            <a href="/projects">Projects</a>
+          <li class="d-inline">
+          <a class="nav-link" href="/projects">Projects</a>
           </li>
         </ul>
       </nav>
@@ -25,9 +26,13 @@
 
     <main>
       <section>
-        <h1>Main Heading</h1>
-        <img src="./images/example.png" alt="Author Headshot" />
-        <p>Author.. Bio...</p>
+        <h1 id="title">Main Heading</h1>
+        <img
+         id="avatar" 
+         src="./images/TC_background.png" 
+         alt="Author Headshot" 
+         />
+        <p class="text-center">Author.. Bio...</p>
       </section>
       <article>
         <section>
@@ -49,10 +54,10 @@
       <nav>
         <ul>
           <li>
-            <a href="/privacy">Privacy Policy</a>
+            <a href="/privacy"class="nav-link">Privacy Policy</a>
           </li>
           <li>
-            <a href="/terms">Terms and Conditions</a>
+            <a href="/terms"class="nav-link">Terms and Conditions</a>
           </li>
         </ul>
       </nav>
